# rust-tada

./: .hgignore  .hgtags  Cargo.toml  LICENSE  LICENSE.Apache-2.0  LICENSE.GPL-2.0  README.md  changelog.md  example-todo.txt  rustfmt.toml  todo.txt
.github/workflows/: ci.yml
src/: action.rs  item.rs  lib.rs  list.rs  main.rs  tadaitem.rs  tadalist.rs  util.rs
src/action/: add.rs  archive.rs  done.rs  edit.rs  find.rs  important.rs  mod.rs  path.rs  pull.rs  quick.rs  remove.rs  show.rs  tidy.rs  urgent.rs  zen.rs
tooling/: generate-help.pl
