[package]
name = "tada"
description = "a todo list manager"
version = "0.2.0"
authors = [ "Toby Inkster <tobyink@cpan.org>" ]
edition = "2021"
repository = "https://github.com/tobyink/rust-tada"
license = "MIT OR Apache-2.0 OR GPL-2.0-or-later"
readme = "README.md"
keywords = [ "todotxt", "todo", "task" ]
categories = [ "command-line-utilities" ]

[package.metadata.deb]
assets = [
	[ "README.md",    "usr/share/doc/tada/README",    "644" ],
	[ "changelog.md", "usr/share/doc/tada/changelog", "644" ],
]

[dependencies]
regex = "1.7"
chrono = "0.4"
tempfile = "3.3.0"
lazy_static = "1.4.0"
console = "0.15.0"
substring = "1.4.0"
clap = { version = "4.0.29", features = ["wrap_help"] }
freezebox = "0.2.3"
url = "2.3.1"
promptly = "0.3.1"
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
date_time_parser = "0.2.0"
path-absolutize = "3.0.14"
